// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots 1`] = `
<div>
  <div>
    <div
      className="css-0"
    >
      <a
        className=""
        href="#"
      >
        <div
          className="css-0__avatar"
          style={
            Object {
              "backgroundImage": "url(https://cdnb.artstation.com/p/users/avatars/000/126/159/large/582fd86d44a71299b5cc51fe9f580471.jpg?1447075438)",
            }
          }
        />
      </a>
      <div
        className="css-0__col-right"
      >
        <a
          className=""
          href="#"
        >
          <div
            className="css-0__name"
          >
            Alexey Ryabov
          </div>
        </a>
        <div
          className="css-0__time"
        >
          2018-6-14
        </div>
        <div
          className="css-0__content"
        >
          &lt;h1&gt;hello whats up&lt;/h1&gt;
        </div>
      </div>
    </div>
    <div
      className="css-0"
    >
      <a
        className=""
        href="/asdf"
      >
        <div
          className="css-0__avatar"
          style={
            Object {
              "backgroundImage": "url(https://cdnb.artstation.com/p/users/avatars/000/126/159/large/582fd86d44a71299b5cc51fe9f580471.jpg?1447075438)",
            }
          }
        />
      </a>
      <div
        className="css-0__col-right"
      >
        <a
          className=""
          href="/asdf"
        >
          <div
            className="css-0__name"
          >
            Alexey Ryabov
          </div>
        </a>
        <div
          className="css-0__time"
        >
          2018-6-14
        </div>
        <div
          className="css-0__content"
        >
          reactomments is awesome!
        </div>
      </div>
    </div>
  </div>
  <form
    onSubmit={[Function]}
  >
    <textarea
      className="css-0"
      id="comment-text"
      name="comment-text"
      onChange={[Function]}
      placeholder="Leave a comment"
      value=""
    />
    <button
      className="css-0"
    >
      Comment
    </button>
  </form>
</div>
`;

exports[`Snapshots 2`] = `
<div>
  <div>
    <div
      className="css-0"
    >
      <a
        className=""
        href="#"
      >
        <div
          className="css-0__avatar"
          style={
            Object {
              "backgroundImage": "url(https://cdnb.artstation.com/p/users/avatars/000/126/159/large/582fd86d44a71299b5cc51fe9f580471.jpg?1447075438)",
            }
          }
        />
      </a>
      <div
        className="css-0__col-right"
      >
        <a
          className=""
          href="#"
        >
          <div
            className="css-0__name"
          >
            Alexey Ryabov
          </div>
        </a>
        <div
          className="css-0__time"
        >
          2018-6-14
        </div>
        <div
          className="css-0__content"
        >
          &lt;h1&gt;hello whats up&lt;/h1&gt;
        </div>
      </div>
    </div>
    <div
      className="css-0"
    >
      <a
        className=""
        href="/asdf"
      >
        <div
          className="css-0__avatar"
          style={
            Object {
              "backgroundImage": "url(https://cdnb.artstation.com/p/users/avatars/000/126/159/large/582fd86d44a71299b5cc51fe9f580471.jpg?1447075438)",
            }
          }
        />
      </a>
      <div
        className="css-0__col-right"
      >
        <a
          className=""
          href="/asdf"
        >
          <div
            className="css-0__name"
          >
            Alexey Ryabov
          </div>
        </a>
        <div
          className="css-0__time"
        >
          2018-6-14
        </div>
        <div
          className="css-0__content"
        >
          reactomments is awesome!
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "fontSize": "1.15em",
        "marginBottom": "10px",
      }
    }
  >
    You should be signed in to write a comment.
  </div>
  <a
    className="css-0"
    href="/signin"
  >
    Sign In
  </a>
</div>
`;
